--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "recipes-backend",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "nodemon src/app.ts",
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node src/app.ts"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "pg": "^8.9.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  }
+   "name": "recipes-backend",
+   "version": "1.0.0",
+   "main": "dist/index.js",
+   "license": "MIT",
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "build": "tsc",
+      "dev": "nodemon --exec ts-node src/app.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "pg": "^8.4.0",
+      "pg-hstore": "^2.3.4",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.12"
+   },
+   "devDependencies": {
+      "@types/cors": "^2.8.13",
+      "@types/express": "^4.17.17",
+      "nodemon": "^2.0.20",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2",
+      "@types/node": "^16.11.10"
+   }
 }
