--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
    "main": "dist/index.js",
    "license": "MIT",
    "scripts": {
-      "start": "ts-node src/index.ts",
       "build": "tsc",
-      "dev": "nodemon --exec ts-node src/app.ts",
+      "dev": "nodemon --exec ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
