--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3001
-DB_USERNAME="michaelmuniz"
-DB_PASSWORD="F805EE8F95"
-DB_NAME="Recipe-App-API"
-DB_HOST="127.0.0.1"
+DB_USERNAME=michaelmuniz
+DB_PASSWORD=F805EE8F95
+DB_NAME=recipeapi
+DB_HOST=localhost
+DB_PORT=5432
