--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
+      "class-validator": "^0.14.0",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
@@ -20,9 +21,9 @@
    "devDependencies": {
       "@types/cors": "^2.8.13",
       "@types/express": "^4.17.17",
+      "@types/node": "^16.11.10",
       "nodemon": "^2.0.20",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2",
-      "@types/node": "^16.11.10"
+      "typescript": "4.5.2"
    }
 }
